--- a/estoque.html
+++ b/estoque.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="icons/icons8-carro-24.png">
     <link rel="stylesheet" href="element.css">
-    <title>Gestor</title>
+    <title>Estoque</title>
 </head>
 
 <body>
@@ -26,8 +26,8 @@
 
         
 
-<footer>
-    Equipe Gerencar - 2020
+<footer> <br>
+    Equipe Gerencar - 2020 <br>
     <a href="index.html"> <button> Menu </button> </a> <br>
     <a href="loggin.html"> <button> Sair </button> </a> <br>
 </footer>
