--- a/gestor.html
+++ b/gestor.html
@@ -26,8 +26,8 @@
 
         
 
-<footer>
-    Equipe Gerencar - 2020
+<footer> <br>
+    Equipe Gerencar - 2020 <br>
     <a href="index.html"> <button> Menu </button> </a> <br>
     <a href="loggin.html"> <button> Sair </button> </a> <br>
 </footer>
