--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         
 
-<footer>
-    Equipe Gerencar - 2020
+<footer> <br>
+    Equipe Gerencar - 2020 <br>
     <a href="loggin.html"> <button> Sair </button> </a> <br>
 </footer>
         
