--- a/novavenda.html
+++ b/novavenda.html
@@ -19,8 +19,8 @@
                 <form> 
                     <p> Nome do cliente</p>
                     <input type="text"><br>
-                    <a href="" > <button> Buscar </button></a>
-                    <a href=""> <button> Novo Cliente</button></a> <br>
+                    <a href="novavenda.html" > <button> Buscar </button></a>
+                    <a href="cadastrocliente.html"> <button> Novo Cliente</button></a> <br>
                     <p> Veiculo</p>
                     <input type="text"> <br>
                     <p> Telefone</p>
