--- a/consultacliente.html
+++ b/consultacliente.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +19,8 @@
                 <form> 
                     <p> Nome do cliente</p>
                     <input type="text"><br>
-                    <a href="consultacliente.html"> <button> Buscar </button></a>
-                    <a href="cadastrocliente.html"> <button> Novo Cadastro</button></a>
+                    <a href="consultacliente.html"> <button> Buscar </button></a> <br>
+                    <a href="cadastrocliente.html"> <strong> Cadastro Cliente </strong></a>
                     <p> Consulta por CPF </p>
                     <input type="text"> <br>
                     <a href="" > <button> Buscar </button></a>
