--- a/novavenda.html
+++ b/novavenda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,8 +19,8 @@
                 <form> 
                     <p> Nome do cliente</p>
                     <input type="text"><br>
-                    <a href="novavenda.html"> <button> Buscar </button></a>
-                    <a href="cadastrocliente.html"> <button> Novo Cliente</button></a> <br>
+                    <a href="novavenda.html"> <button> Buscar </button></a> <br>
+                    <a href="cadastrocliente.html"> <strong> Cadastro cliente</strong></a>
                     <p> Veiculo</p>
                     <input type="text"> <br>
                     <p> Telefone</p>
