--- a/cadastrocliente.html
+++ b/cadastrocliente.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,8 +31,8 @@
                                 <input type="text" style="width: 140%;"> <br>
                                 <p><b>Veiculo Cadastrado</b></p>
                                 <input type="text" style="width: 140%;"> <br>
-                                <a href=" "> <button> Salvar Dados </button> </a>
-                                <a href="novavenda.html"> <button> Nova Venda </button> </a>
+                                <a href=" "> <button> Salvar Dados </button> </a> <br>
+                                <a href="novavenda.html"> <strong> Nova Venda </strong></a>
 
                             </td>
                         </tr>
