--- a/landingpage.html
+++ b/landingpage.html
@@ -17,8 +17,12 @@
         <h2> Facil cadastro e adesão</h2>
         <nav>
             <ul>
-                <a href="loggin.html"> Login</a> <br>
-                <a href="loggin.html"> Comprar Produto</a>
+                <a href="loggin.html">
+                <img src="icons/login.png" alt="login">   
+                </a> <br>
+                <a href="loggin.html"> 
+                <img src="icons/comprar.png"    alt=" Comprar">
+                </a>
             </ul>
         </nav>
 
