--- a/novavenda.html
+++ b/novavenda.html
@@ -20,7 +20,7 @@
                     <p> Nome do cliente</p>
                     <input type="text"><br>
                     <a href="novavenda.html"> <button> Buscar </button></a> <br>
-                    <a href="cadastrocliente.html"> <strong> Cadastro cliente</strong></a>
+                    <a href="cadastrocliente.html"> <strong> Cadastro Cliente </strong> </a>                                     
                     <p> Veiculo</p>
                     <input type="text"> <br>
                     <p> Telefone</p>
