--- a/consultacliente.html
+++ b/consultacliente.html
@@ -19,8 +19,8 @@
                 <form> 
                     <p> Nome do cliente</p>
                     <input type="text"><br>
-                    <a href="consultacliente.html"> <button> Buscar </button></a> <br>
-                    <a href="cadastrocliente.html"> <strong> Cadastro Cliente </strong></a>
+                    <a href="consultacliente.html"> <button> Buscar </button></a> 
+                    <a href="cadastrocliente.html"> Cadastro Cliente </a>
                     <p> Consulta por CPF </p>
                     <input type="text"> <br>
                     <a href="" > <button> Buscar </button></a>
