--- a/landingpage.html
+++ b/landingpage.html
@@ -11,17 +11,20 @@
 <body>
 
 <header>
-        <img src="icons/logog.png" alt="Logo"> 
+        <img src="icons/logog.png" class="banner" alt="Logo"> 
 </header>    
         <h1> Sistema de Gerenciamento de oficinas mecânias</h1>
         <h2> Facil cadastro e adesão</h2>
+        <figure class="fotofundo">
+            <img src="images/fundo.jpg">
+        </figure>
         <nav>
             <ul>
                 <a href="loggin.html">
-                <img src="icons/login.png" alt="login">   
+                <button> Login </button> 
                 </a> <br>
                 <a href="loggin.html"> 
-                <img src="icons/comprar.png"    alt=" Comprar">
+                <button> Comprar Produto </button>
                 </a>
             </ul>
         </nav>
@@ -33,7 +36,7 @@
 
         
 
-<footer>
+<footer class="rodape">
     Equipe Gerencar - 2020
 </footer>
         
