--- a/landingpage.html
+++ b/landingpage.html
@@ -15,8 +15,9 @@
 </header>    
         <h1> Sistema de Gerenciamento de oficinas mecânias</h1>
         <h2> Facil cadastro e adesão</h2>
-        <figure class="fotofundo">
-            <img src="images/fundo.jpg">
+        <figure >
+            <img class ="fotofundo" src="images/fundo.jpg">
+            <img class =" pic2" src="images/mech3.jpg">
         </figure>
         <nav>
             <ul>
